--- a/X264toX265/X264toX265.csproj
+++ b/X264toX265/X264toX265.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.6.8" />
+    <PackageReference Include="NLog.Config" Version="4.6.8" />
     <PackageReference Include="RestSharp" Version="106.10.1" />
   </ItemGroup>
 
