--- a/X264toX265/nlog.config
+++ b/X264toX265/nlog.config
@@ -10,9 +10,9 @@
   <targets>
     <!-- write logs to file -->
     <target xsi:type="File" name="logfile" fileName="c:\logs\hevc-conversion.log"
-            layout="${longdate}|${level}|${message} |${all-event-properties} ${exception:format=tostring}" />
+            layout="${longdate} - ${level}: ${callsite:className=True:includeNamespace=false:fileName=False:includeSourcePath=False:methodName=True} - ${message} |${all-event-properties} ${exception:format=tostring}" />
     <target xsi:type="Console" name="logconsole"
-            layout="${longdate}|${level}|${message} |${all-event-properties} ${exception:format=tostring}" />
+            layout="${longdate} - ${level}: ${message} |${all-event-properties} ${exception:format=tostring}" />
   </targets>
 
   <!-- rules to map from logger name to target -->
